# gdictthai

./: AUTHORS  Makefile  config.h  config.h.in  configure
autom4te.cache/: output.0  requests
branches/kitty/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  gdictthai.glade
branches/kitty/autom4te.cache/: traces.0
branches/kitty/po/: Makefile.in
branches/kitty/src/: dictionary.c  interface.c  tdictthai.c
po/: Makefile
src/: Makefile  callbacks.c  dictionary.h  install.sh  wordlist.h
tags/gdictthai_0_0_1/po/: gdictthai.pot
tags/gdictthai_0_0_1/src/: Makefile.am  Makefile.in  main.c
trunk/: config.status  configure.in  gdictthai.gladep
trunk/src/: callbacks.h
